--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Frontend Mentor | GitHub user search app</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      devfinder Light Dark Search GitHub username... Search Joined Repos
+      Followers Following
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
