Installing necessary dependencies
- Tailwind Configuration
- Axios

--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <title>Frontend Mentor | GitHub user search app</title>
   </head>
   <body>
-    <div id="root">
-      devfinder Light Dark Search GitHub username... Search Joined Repos
-      Followers Following
-    </div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
